# ks-lib

./: CMakeLists.txt  README.md  test.cpp
src/: bigint.cpp  bigint.hpp  check.hpp  color.hpp  decimal.cpp  decimal.hpp  dict.hpp  list.hpp  print.hpp  result.hpp  string.cpp  string.hpp
